--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditFormatoCompra.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditFormatoCompra.cshtml
@@ -328,6 +328,12 @@
                                                 <i class="fa-regular fa-square-plus"></i>
                                                 Agregar
                                             </button>
+                                            <button class="btn btn-danger btn-sm float-right" onclick="borrarFila()">
+                                                <i class="fa-regular fa-trash-can"></i>
+                                                Borrar fila seleccionada
+                                            </button>
+
+
                                         </p>
                                         <div class="form-group row">
 
@@ -1206,8 +1212,8 @@
                 //width: '100%',
                 height: '400px',
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
-                contextMenu: ['row_above', 'row_below', '---------', 'remove_row', '---------', 'undo', 'redo', '---------', 'cut', 'copy'],
+                outsideClickDeselects: false,
+                contextMenu: ['row_above', 'row_below', '---------', 'undo', 'redo', '---------', 'cut', 'copy'],
                 language: 'es-MX',
                 cells: function (row, col) {
                     let cp = {}
@@ -1676,6 +1682,37 @@
            hot.render();
         });
 
+        function borrarFila() {
+
+            let seleccion = hot.getSelectedLast();
+
+            if (typeof seleccion === 'undefined') {
+                toastMixin.fire({ title: 'No se detectó ninguna fila seleccionada.', icon: 'warning' });
+            } else {
+                let filaSeleccionada = seleccion[0];
+
+                if (seleccion[0] == -1)
+                    toastMixin.fire({ title: 'Seleccione sólo una celda.', icon: 'warning' });
+                else {
+
+                    Swal.fire({
+                        title: "¿Quieres borrar la fila #" + (filaSeleccionada + 1) + " ?",
+                        showDenyButton: true,
+                        confirmButtonText: "Borrar",
+                        denyButtonText: `Cancelar`
+                    }).then((result) => {
+                        /* Read more about isConfirmed, isDenied below */
+                        if (result.isConfirmed) {
+                            hot.alter('remove_row', filaSeleccionada);
+                            hot.deselectCell()
+                            toastMixin.fire({ title: 'Fila borrada.', icon: 'success' });
+                        }
+
+                    });
+                }
+            }
+
+        }
 
     </script>
 
