--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditExtension.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditExtension.cshtml
@@ -303,6 +303,11 @@
                                                     <i class="fa-regular fa-square-plus"></i>
                                                     Agregar
                                                 </button>
+                                                <button class="btn btn-danger btn-sm float-right" onclick="borrarFila()">
+                                                    <i class="fa-regular fa-trash-can"></i>
+                                                    Borrar fila seleccionada
+                                                </button>
+
                                             </p>
                                             <div class="form-group row">
 
@@ -558,6 +563,7 @@
                     // specify columns hidden by default
                     columns: [0, GetColFromName("Valido")], //contains ID
                 },
+                outsideClickDeselects: false,
                 licenseKey: 'non-commercial-and-evaluation',
                 rowHeaders: true,
                 autoColumnSize: true,
@@ -866,6 +872,37 @@
             hot.render();
         });
 
+        function borrarFila() {
+
+            let seleccion = hot.getSelectedLast();
+
+            if (typeof seleccion === 'undefined') {
+                toastMixin.fire({ title: 'No se detectó ninguna fila seleccionada.', icon: 'warning' });
+            } else {
+                let filaSeleccionada = seleccion[0];
+
+                if (seleccion[0] == -1)
+                    toastMixin.fire({ title: 'Seleccione sólo una celda.', icon: 'warning' });
+                else {
+
+                    Swal.fire({
+                        title: "¿Quieres borrar la fila #" + (filaSeleccionada + 1) + " ?",
+                        showDenyButton: true,
+                        confirmButtonText: "Borrar",
+                        denyButtonText: `Cancelar`
+                    }).then((result) => {
+                        /* Read more about isConfirmed, isDenied below */
+                        if (result.isConfirmed) {
+                            hot.alter('remove_row', filaSeleccionada);
+                            hot.deselectCell()
+                            toastMixin.fire({ title: 'Fila borrada.', icon: 'success' });
+                        }
+
+                    });
+                }
+            }
+
+        }
 
     </script>
 
