--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
@@ -290,6 +290,12 @@
                                                     <i class="fa-regular fa-square-plus"></i>
                                                     Agregar
                                                 </button>
+                                                <button class="btn btn-danger btn-sm float-right" onclick="borrarFila()">
+                                                    <i class="fa-regular fa-trash-can"></i>
+                                                    Borrar fila seleccionada
+                                                </button>
+
+
                                             </p>
                                             <div class="form-group row">
 
@@ -1077,7 +1083,7 @@
                 renderAllRows : true,
                 manualColumnResize: true,
                 licenseKey: 'non-commercial-and-evaluation',
-                contextMenu: ['row_above', 'row_below', '---------', 'remove_row', '---------', 'undo', 'redo', '---------', 'cut', 'copy'],
+                contextMenu: ['row_above', 'row_below', '---------', 'undo', 'redo', '---------', 'cut', 'copy'],
                 language: 'es-MX',
                 cells: function (row, col) {
                     let cp = {}
@@ -1121,21 +1127,8 @@
                         }
                     });
                 },
-                beforeRemoveRow: (index, amount, physicalRows, [source]) => {
-                    let valorActual = hot.getDataAtCell(index, GetColFromName("Número Material"));
-
-                    if (amount > 1) {
-                        toastMixin.fire({ title: 'Sólo puede eliminarse una fila a la vez.', icon: 'warning' });
-                        return false;
-                    }
-
-                    if (valorActual != null && !valorActual.includes("Rollo")) {
-                        toastMixin.fire({ title: 'No se puede eliminar un material que ya ha sido creado: ' + valorActual, icon: 'warning' });
-                        return false;
-                    } else {
-                        return true;
-                    }
-                }
+                outsideClickDeselects: false,
+            
             });
 
             //agrega eventos
@@ -1720,7 +1713,45 @@
             hot.alter('insert_row_below', col, 1);
         }
 
+        function borrarFila() {
 
+            let seleccion = hot.getSelectedLast();
+
+            if (typeof seleccion === 'undefined') {
+                toastMixin.fire({ title: 'No se detectó ninguna fila seleccionada.', icon: 'warning' });
+            } else {
+                let filaSeleccionada = seleccion[0];
+
+                if (seleccion[0] == -1)
+                    toastMixin.fire({ title: 'Seleccione sólo una celda.', icon: 'warning' });
+                else {
+
+                    Swal.fire({
+                        title: "¿Quieres borrar la fila #" + (filaSeleccionada + 1) + " ?",
+                        showDenyButton: true,
+                        confirmButtonText: "Borrar",
+                        denyButtonText: `Cancelar`
+                    }).then((result) => {
+                        /* Read more about isConfirmed, isDenied below */
+                        if (result.isConfirmed) {
+
+                            let valorActual = hot.getDataAtCell(filaSeleccionada, GetColFromName("Número Material"));
+
+                            if (valorActual != null && !valorActual.includes("Rollo")) {
+                                toastMixin.fire({ title: 'No se puede eliminar un material que ya ha sido creado: ' + valorActual, icon: 'warning' });
+                                return false;
+                            } else {
+                                hot.alter('remove_row', filaSeleccionada);
+                                hot.deselectCell()
+                                toastMixin.fire({ title: 'Fila borrada.', icon: 'success' });
+                            }
+                        }
+
+                    });
+                }
+            }
+
+        }
 
         $(window).resize(function () {
             hot.render();
